	PR middle-end/57134 	PR middle-end/57586 	* expr.c (expand_expr_real_1 <normal_inner_ref>): Pass 	EXPAND_MEMORY and EXPAND_WRITE to recursive call.  Don't use 	bitfield expansion when EXPAND_MEMORY. 	(expand_expr_real_1 <VIEW_CONVERT_EXPR>): Pass modifier likewise.

* gcc.dg/pr57134.c: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@200086 138bc75d-0d04-0410-961f-82ee72b054a4